--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@sherifforg/types": "^3.1.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
+    "eslint-config-sheriff": "^18.5.0",
+    "eslint-define-config": "^2.1.0",
+    "eslint-ts-patch": "^9.2.0-6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
