--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@react-spring/web": "^9.7.3",
@@ -18,7 +20,16 @@
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.5.0",
     "@sherifforg/types": "^3.1.1",
+    "@storybook/addon-essentials": "^8.1.5",
+    "@storybook/addon-interactions": "^8.1.5",
+    "@storybook/addon-links": "^8.1.5",
+    "@storybook/addon-onboarding": "^8.1.5",
+    "@storybook/blocks": "^8.1.5",
+    "@storybook/nextjs": "^8.1.5",
+    "@storybook/react": "^8.1.5",
+    "@storybook/test": "^8.1.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -26,8 +37,10 @@
     "eslint-config-next": "14.2.3",
     "eslint-config-sheriff": "^18.5.0",
     "eslint-define-config": "^2.1.0",
+    "eslint-plugin-storybook": "^0.8.0",
     "eslint-ts-patch": "^9.2.0-6",
     "postcss": "^8",
+    "storybook": "^8.1.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
